bug 343792: bulletproof libical to not hang after import of .ics file which has INTERVAL=0 in RRULE. r=dbo